# HSR-Simulation

./: CLAUDE.md  Levelmultipliers(tomove).txt  README.md  elationlevel(tomove).txt  hsr_request_optimize_1775562693197.json  output.json
simulation-api/hsr-optimizer-engine/: Cargo.toml
simulation-api/hsr-optimizer-engine/docs/: ADDING_CHARACTERS.md  ADDING_ENEMIES.md  ADDING_LIGHTCONES.md  ADDING_PLANARS.md  ADDING_RELICS.md  APPROXIMATIONS.md  IMPLEMENTATION_REFERENCE.md
simulation-api/hsr-optimizer-engine/src/: damage.rs  effects.rs  ids.rs  main.rs  models.rs  simulator.rs
simulation-api/hsr-optimizer-engine/src/characters/: acheron.rs  aglaea.rs  anaxa.rs  archer.rs  argenti.rs  arlan.rs  ashveil.rs  asta.rs  aventurine.rs  bailu.rs  black_swan.rs  blade.rs  boothill.rs  bronya.rs  castorice.rs  cerydra.rs  cipher.rs  clara.rs  dan_heng.rs  dan_heng_il.rs  dan_heng_pt.rs  dr_ratio.rs  feixiao.rs  firefly.rs  fu_xuan.rs  gallagher.rs  gepard.rs  guinaifen.rs  hanya.rs  jiaoqiu.rs  mod.rs  pela.rs  silver_wolf.rs
simulation-api/hsr-optimizer-engine/src/enemies/: antibaryon.rs  baryon.rs  mod.rs
simulation-api/hsr-optimizer-engine/src/lightcones/: dream_scented_wheat.rs  mod.rs  passing_shore.rs
simulation-api/hsr-optimizer-engine/src/planars/: amphoreus_the_eternal_land.rs  arcadia_of_woven_dreams.rs  belobog_of_the_architects.rs  bone_collections_serene_demesne.rs  broken_keel.rs  celestial_differentiator.rs  city_of_converging_stars.rs  duran_dynasty_of_running_wolves.rs  firmament_frontline_glamoth.rs  fleet.rs  forge_of_the_kalpagni_lantern.rs  mod.rs  (+15 more)
(+95 files in other folders)
