[package]
name = "hsr-optimizer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.12"
rand = { version = "0.8", features = ["small_rng"] }

[[bin]]
name = "hsr-optimizer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
